Attempting to add heroku build package
Attempting to get the repo ready for deploying into heroku. Hopefully
it works.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,9 @@ jspm_packages
 /libpeerconnection.log
 npm-debug.log
 testem.log
+
+buildpack/mruby/
+buildpack/spec/examples.txt
+buildpack/.bundle
+buildpack/vendor/bundle
+buildpack/spec/fixtures
