--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "ember": "~2.9.0",
     "ember-cli-shims": "0.1.3",
-    "firebase": "^3.0.0"
+    "firebase": "^3.0.0",
+    "leaflet": "^1.0.0"
   }
 }
