--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-data": "^2.9.0",
     "ember-export-application-global": "^1.0.5",
     "ember-leaflet": "3.0.3",
+    "ember-leaflet-google-tile-layer": "0.0.3",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.3",
