--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@turf/turf": "^3.8.0",
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
+    "ember-ajax": "2.5.4",
     "ember-browserify": "^1.1.13",
     "ember-cli": "2.9.1",
     "ember-cli-app-version": "^2.0.0",
