--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.9.0",
+    "ember-data-has-many-query": "0.1.7",
     "ember-export-application-global": "^1.0.5",
     "ember-leaflet": "3.0.3",
     "ember-leaflet-google-tile-layer": "0.0.3",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.3",
-    "emberfire": "2.0.4",
+    "emberfire": "2.0.6",
+    "emberfire-utils": "1.1.0",
     "loader.js": "^4.0.10",
     "torii": "0.8.1",
     "watchman": "0.1.8"
