adding updates to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
----
+
 language: node_js
 node_js:
   - "4"
@@ -23,3 +23,8 @@ install:
 
 script:
   - npm test
+
+ deploy:
+     provider: firebase
+     token:
+         secure: '1/sGsqQWdBJMSMWxtIs2o5UzoO6bVqv6GCqvOboKrXyFs'
