--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-deploy": "1.0.1",
+    "ember-cli-geo": "4.0.0",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
     "ember-cli-mirage": "0.3.2",
     "ember-cli-moment-shim": "3.3.1",
+    "ember-cli-polyfill-io": "1.2.3",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "6.2.0",
