--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@turf/turf": "^4.4.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-cli": "2.10.0",
@@ -47,10 +48,15 @@
     "emberfire": "2.0.7",
     "emberfire-utils": "1.3.0",
     "leaflet": "1.0.3",
-    "loader.js": "^4.0.10"
+    "liquid-fire": "0.27.3",
+    "loader.js": "^4.0.10",
+    "watchman": "^0.1.8"
   },
   "engines": {
     "node": ">= 0.12.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "foundation-sites": "^6.4.1"
+  }
 }
