--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@turf/turf": "^4.4.0",
+    "@turf/turf": "^4.5.2",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-cli": "2.10.0",
@@ -23,11 +23,11 @@
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-deploy": "1.0.1",
+    "ember-cli-eslint": "4.2.0",
     "ember-cli-geo": "4.0.0",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
+    "ember-cli-inject-live-reload": "^1.7.0",
     "ember-cli-mirage": "0.3.2",
     "ember-cli-moment-shim": "3.3.1",
     "ember-cli-polyfill-io": "1.2.3",
@@ -38,7 +38,7 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-composability-tools": "0.0.8",
-    "ember-data": "^2.10.0",
+    "ember-data": "^2.14.7",
     "ember-export-application-global": "^1.0.5",
     "ember-leaflet": "3.0.11",
     "ember-leaflet-google-mutant-layer": "0.0.10",
@@ -48,8 +48,7 @@
     "emberfire": "2.0.7",
     "emberfire-utils": "1.3.0",
     "leaflet": "1.0.3",
-    "liquid-fire": "0.27.3",
-    "loader.js": "^4.0.10",
+    "loader.js": "^4.5.1",
     "watchman": "^0.1.8"
   },
   "engines": {
