--- a/package.json
+++ b/package.json
@@ -15,30 +15,45 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@turf/turf": "^4.6.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.14.2",
+    "ember-cli": "^2.17.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.3.0",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-dotenv": "^2.0.0",
+    "ember-cli-geo": "^4.0.0",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-mirage": "^0.3.4",
+    "ember-cli-moment-shim": "^3.4.0",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "^7.1.2",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.14.9",
     "ember-export-application-global": "^2.0.0",
+    "ember-leaflet": "3.0.11",
+    "ember-leaflet-google-mutant-layer": "0.0.10",
     "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.4.1",
+    "ember-paper": "^1.0.0-beta.4",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
     "ember-welcome-page": "^3.0.0",
+    "emberfire": "^2.0.7",
+    "emberfire-utils": "^1.5.1",
+    "leaflet": "^1.2.0",
     "loader.js": "^4.2.3"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "foundation-sites": "^6.4.4-rc1"
+  }
 }
