--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "repository": "",
   "scripts": {
     "build": "ember build",
+    "lint:js": "eslint ./*.js app blueprints config lib server tests",
     "start": "ember server",
     "test": "ember test"
   },
@@ -18,7 +19,7 @@
     "@turf/turf": "^4.6.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "^2.17.1",
+    "ember-cli": "~3.1.3",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.3.0",
     "ember-cli-dependency-checker": "^1.3.0",
@@ -34,17 +35,19 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "~2.14.9",
+    "ember-data": "~3.1.0",
     "ember-export-application-global": "^2.0.0",
     "ember-leaflet": "3.0.11",
     "ember-leaflet-google-mutant-layer": "0.0.10",
     "ember-load-initializers": "^1.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.4.1",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.14.1",
+    "ember-source": "~3.1.0",
     "ember-welcome-page": "^3.0.0",
     "emberfire": "^2.0.7",
     "emberfire-utils": "^1.5.1",
+    "eslint-plugin-ember": "^5.0.0",
     "leaflet": "^1.2.0",
     "loader.js": "^4.2.3"
   },
