--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "private": true,
   "dependencies": {
-    "foundation-sites": "^6.4.4-rc1"
+    "foundation-sites": "^6.4.4-rc1",
+    "node-sass": "^4.9.0"
   }
 }
