--- a/package.json
+++ b/package.json
@@ -17,28 +17,38 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@turf/turf": "^5.1.6",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.2.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-dotenv": "^2.1.0",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-mirage": "^0.4.7",
     "ember-cli-qunit": "^4.3.2",
+    "ember-cli-sass": "^7.1.7",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~3.2.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-leaflet": "^3.0.15",
+    "ember-leaflet-google-mutant-layer": "0.0.14",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-paper": "^1.0.0-beta.7",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.2.0",
     "ember-welcome-page": "^3.0.0",
+    "emberfire": "^2.0.10",
     "eslint-plugin-ember": "^5.0.0",
+    "leaflet": "^1.3.1",
     "loader.js": "^4.2.3",
     "qunit-dom": "^0.6.2"
   },
