--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-paper": "^1.0.0-beta.7",
+    "ember-paper-link": "0.0.5",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.2.0",
     "ember-welcome-page": "^3.0.0",
